welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:9: error: not found: value reucule
  reucule()
  ^